Reworked board organisation. WIP : FEN instead of moves list.

--- a/res.qrc
+++ b/res.qrc
@@ -12,7 +12,8 @@
         <file>pieces/WP.png</file>
         <file>pieces/WQ.png</file>
         <file>pieces/WR.png</file>
+        <file>wood_b.jpg</file>
+        <file>wood_w.jpg</file>
         <file>circle.png</file>
-        <file>circle_blue.png</file>
     </qresource>
 </RCC>
