--- a/chessboardwindow.ui
+++ b/chessboardwindow.ui
@@ -31,7 +31,7 @@
      <x>0</x>
      <y>0</y>
      <width>640</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -42,7 +42,15 @@
     <addaction name="separator"/>
     <addaction name="actionQuitter"/>
    </widget>
+   <widget class="QMenu" name="menuConfiguration">
+    <property name="title">
+     <string>Configuration</string>
+    </property>
+    <addaction name="actionDifficulte"/>
+    <addaction name="actionJoueurs"/>
+   </widget>
    <addaction name="menuMenu"/>
+   <addaction name="menuConfiguration"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionNouvelle_partie">
@@ -53,6 +61,16 @@
   <action name="actionQuitter">
    <property name="text">
     <string>Quitter</string>
+   </property>
+  </action>
+  <action name="actionDifficulte">
+   <property name="text">
+    <string>Difficulté</string>
+   </property>
+  </action>
+  <action name="actionJoueurs">
+   <property name="text">
+    <string>Joueurs</string>
    </property>
   </action>
  </widget>
